Fixed console cleaning